--- a/example.html
+++ b/example.html
@@ -15,17 +15,22 @@
             // Provider configuration
             angular.module('example', ['ngSegment']).config(function (segmentProvider) {
 
-                segmentProvider.setDebug(true);
+                segmentProvider.setDebug(true).setAutoload(false);
 
-                segmentProvider.setCondition(function ($http) {
-                    return typeof $http === 'function';
-                });
+                console.log(segmentProvider);
+                segmentProvider.track('test');
             });
 
             // Service configuration and usage
             angular.module('example').controller('ExampleController', function (segment, segmentLoader) {
 
+
                 segment.track('controller test');
+                window.analytics.shift();
+                segment.track('2');
+
+                console.log(window.analytics);
+                console.log(angular.isArray(window.analytics[0]));
 
             //    segmentLoader.load(segment.config.apiKey);
             });
