Fix exception due to code mangling

--- a/example.html
+++ b/example.html
@@ -7,7 +7,7 @@
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.js"></script>
 
         <!-- ngSegment -->
-        <script src="segment.js"></script>
+        <script src="segment.min.js"></script>
 
         <!-- Example Angular application -->
         <script>
